# tuned-tensor-local

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  local-workflow-remediation-2026-07-13.md  local-workflow-ux-review-2026-07-13.md  spark.md
examples/: dpo-preferences.jsonl  dpo-run-request.json  local-runner.json  smoke-run-request.json
examples/polymarket-anomaly-study/: .gitignore  README.md  logreg-balanced-c1.trial.json  polymarket.study.json  prepare_splits.py
src/: artifacts.ts  compare.ts  contracts.ts  dataset.ts  doctor.ts  evaluation.ts  huggingface-cache.ts  index.ts  labeling-sanitize.ts  labeling.ts  local-project.ts  model-registry.ts  model-server.ts  openrouter.ts  orchestrator.ts  prefetch.ts  process-runner.ts  process-training.ts  run-reporter.ts  server.ts  store.ts  studies.ts  study-candidates.ts  study-metrics.ts  study-provenance.ts  study-tests.ts  study-trial-core.ts  study-trials.ts
test/: artifacts.test.ts  cli.test.ts  compare.test.ts  dataset.test.ts  doctor.test.ts  evaluation.test.ts  labeling.test.ts  local-project.test.ts  model-registry.test.ts  model-server.test.ts  openrouter.test.ts  orchestrator.test.ts  prefetch.test.ts  process-runner.test.ts  process-training.test.ts  server.test.ts  store.test.ts  studies.test.ts  study-candidates.test.ts  study-metrics.test.ts  study-tests.test.ts  study-trials.test.ts
training/sft-local/: pyproject.toml
training/sft-local/src/: evaluate.py  train.py  train_dpo.py
(+8 files in other folders)
