[project]
name = "tuned-tensor-local-sft"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.0.0",
  "peft>=0.13.0",
  "safetensors>=0.4.5",
  "torch>=2.11.0",
  "transformers>=4.46.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
package = false
