[project]
name = "tuned-tensor-local-sft"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.0.0",
  "datasets>=4.0.0",
  "peft>=0.13.0",
  "pillow>=10.0.0",
  "qwen-vl-utils>=0.0.14",
  "safetensors>=0.4.5",
  "torch>=2.11.0",
  "torchvision>=0.24.0",
  "transformers>=4.57.0",
  "trl>=1.7.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
package = false
